@@ -33,7 +33,6 @@ import parser.ast.*;
 import parser.type.*;
 import parser.visitor.ASTTraverseModify;
 import prism.*;
-import simulator.ModulesFileModelGenerator;
 
 /**
  * Model checker for probabilistic timed automata (PTAs).
@@ -50,6 +49,8 @@ public class PTAModelChecker extends PrismComponent
 	private LabelList labelList;
 	// PTA
 	private PTA pta;
+	// Mapping from all (original model) variables to non-clocks only
+	private int[] nonClockVarMap;
 
 	/**
 	 * Constructor.
@@ -76,6 +77,18 @@ public class PTAModelChecker extends PrismComponent
 			labelList.addLabel(propertiesFile.getLabelList().getLabelNameIdent(i), propertiesFile.getLabelList().getLabel(i).deepCopy());
 		}
 		labelList = (LabelList) labelList.replaceConstants(constantValues);
+
+		// Build mapping from all (original model) variables to non-clocks only
+		int numVars = modulesFile.getNumVars();
+		nonClockVarMap = new int[numVars];
+		int count = 0;
+		for (int i = 0; i < numVars; i++) {
+			if (modulesFile.getVarType(i) instanceof TypeClock) {
+				nonClockVarMap[i] = -1;
+			} else {
+				nonClockVarMap[i] = count++;
+			}
+		}
 	}
 
 	/**
@@ -83,6 +96,7 @@ public class PTAModelChecker extends PrismComponent
 	 */
 	public Result check(Expression expr) throws PrismException
 	{
+		Modules2PTA m2pta;
 		Result res;
 		String resultString;
 		long timer;
@@ -90,20 +104,15 @@ public class PTAModelChecker extends PrismComponent
 		// Starting model checking
 		timer = System.currentTimeMillis();
 
-		// Build a model generator
-		ModelGenerator modelGen;
-		try {
-			modelGen = new ModulesFileModelGenerator(modulesFile, this);
-		} catch (PrismException e) {
-			throw new PrismException(e.getMessage() + ". Try the digital clocks engine instead");
+		// Check for system...endsystem - not supported yet
+		if (modulesFile.getSystemDefn() != null) {
+			throw new PrismException("The system...endsystem construct is not supported yet (try the digital clocks engine instead)");
 		}
 		
 		// Translate ModulesFile object into a PTA object
-		// Technically, this just requires a ModelGenerator,
-		// but for now we assume a ModulesFile for the purposes of labels
 		mainLog.println("\nBuilding PTA...");
-		ConstructPTA constructPTA = new ConstructPTA(this);
-		pta = constructPTA.constructPTA(modelGen);
+		m2pta = new Modules2PTA(this, modulesFile);
+		pta = m2pta.translate();
 		mainLog.println("\nPTA: " + pta.infoString());
 
 		// Check for references to clocks - not allowed (yet)
@@ -219,7 +228,7 @@ public class PTAModelChecker extends PrismComponent
 		prob = computeProbabilisticReachability(targetLocs, min);
 
 		// Return result
-		return new Result(Double.valueOf(prob));
+		return new Result(new Double(prob));
 	}
 
 	/**
@@ -371,7 +380,7 @@ public class PTAModelChecker extends PrismComponent
 			for (i = 0; i < n; i++) {
 				//state = (Object[])states.get(i);
 				State state = (State) states.get(i);
-				if (expr.evaluateBoolean(state)) {
+				if (expr.evaluateBoolean(state, nonClockVarMap)) {
 					res.set(i);
 				}
 			}
