@@ -56,6 +56,7 @@ import prism.PrismSettingsListener;
 import userinterface.GUIClipboardEvent;
 import userinterface.GUIPlugin;
 import userinterface.GUIPrism;
+import userinterface.OptionsPanel;
 import userinterface.util.GUIEvent;
 import userinterface.util.GUILogEvent;
 
@@ -212,7 +213,7 @@ public class GUILog extends GUIPlugin implements MouseListener, PrismSettingsLis
 			}
 		};
 		clearAction.putValue(Action.SHORT_DESCRIPTION, "Clear log");
-		clearAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_C));
+		clearAction.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_C));
 		clearAction.putValue(Action.NAME, "Clear log");
 		clearAction.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallDelete.png"));
 		
@@ -239,7 +240,7 @@ public class GUILog extends GUIPlugin implements MouseListener, PrismSettingsLis
 			}
 		};
 		saveAction.putValue(Action.SHORT_DESCRIPTION, "Save log as...");
-		saveAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_S));
+		saveAction.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_S));
 		saveAction.putValue(Action.NAME, "Save log as...");
 		saveAction.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallSave.png"));
 		
@@ -299,6 +300,11 @@ public class GUILog extends GUIPlugin implements MouseListener, PrismSettingsLis
 				popupMenu.show(e.getComponent(), e.getX(), e.getY());
 			}
 		}
+	}
+	
+	public OptionsPanel getOptions()
+	{
+		return null;
 	}
 	
 	public void notifySettings(PrismSettings settings)
